--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,5 +1,11 @@
 {
   "name": "Budget Control",
+  "short_name": "BC",
+  "theme_color": "#1976d2",
+  "background_color": "#fafafa",
+  "display": "standalone",
+  "scope": "./",
+  "start_url": "./",
   "icons": [
     {
       "src": "apple-icon.png",
